Fix feedback scrollbar

--- a/TeamManager.UI/src/app/feedback/feedback-history/feedback-history.component.scss
+++ b/TeamManager.UI/src/app/feedback/feedback-history/feedback-history.component.scss
@@ -53,6 +53,12 @@ ul li {
     text-align: center;
 }
 
+.feedback-container {
+    height: 65vh;
+    overflow-y: scroll;
+    margin-top: 1rem;
+}
+
 // .him+.me {
 //     border-bottom-right-radius: 5px;
 // }
