--- a/TeamManager.UI/src/styles.scss
+++ b/TeamManager.UI/src/styles.scss
@@ -1,5 +1,7 @@
 @import '~@angular/cdk/overlay-prebuilt.css';
 
+html, body { height: 100%; }
+
 /* You can add global styles to this file, and also import other style files */
 .month-container {
   width: 20%;
@@ -26,4 +28,19 @@
     position: absolute;
     top: 50%;
     left: 50%;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+  background-color: #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ddd;
 }
